feat: add protected platform email relay
